main layout fix

--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -1,5 +1,5 @@
 <template name="marketplace">
-    <div class="marketplace">
+    <div class="marketplace-view">
         <div class="box">
             {{ #each products }}
                 <div class="item">
