--- a/client/pages/policy.html
+++ b/client/pages/policy.html
@@ -1,6 +1,6 @@
 <template name="policy">
     <div class="policy-view">
-        <div class="container">
+        <div class="container-fluid">
             <div class="page-header">
                 <h1>
                     Privacy Policy
