--- a/client/pages/terms.html
+++ b/client/pages/terms.html
@@ -1,6 +1,6 @@
 <template name="terms">
     <div class="terms-view">
-        <div class="container">
+        <div class="container-fluid">
             <div class="page-header">
                 <h1>
                     Terms of Service Agreement
