--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -62,17 +62,17 @@
                             <div class="item-actions">
                                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default">
+                                        <button type="button" class="btn btn-default btn-flat">
                                             <i class="mdi-action-favorite"></i> 123
                                         </button>
                                     </div>
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default">
+                                        <button type="button" class="btn btn-default btn-flat">
                                             <i class="mdi-action-question-answer"></i>
                                         </button>
                                     </div>
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default">
+                                        <button type="button" class="btn btn-default btn-flat">
                                             <i class="mdi-social-share"></i>
                                         </button>
                                     </div>
