--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -39,8 +39,8 @@
                             </a>
                         </div>
                         <div class="item-action">
-                            <button type="button" class="btn btn-fab btn-raised btn-default">
-                                <i class="mdi-action-add-shopping-cart"></i>
+                            <button type="button" class="btn btn-fab btn-raised btn-primary">
+                                <i class="mdi-action-shopping-basket"></i>
                             </button>
                         </div>
                         <div class="item-info">
@@ -62,17 +62,17 @@
                             <div class="item-actions">
                                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default btn-flat">
-                                            <i class="mdi-action-favorite"></i> 123
+                                        <button type="button" class="btn btn-default">
+                                            <i class="mdi-action-favorite-outline"></i>
                                         </button>
                                     </div>
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default btn-flat">
-                                            <i class="mdi-action-question-answer"></i>
+                                        <button type="button" class="btn btn-default">
+                                            <i class="mdi-action-add-shopping-cart"></i>
                                         </button>
                                     </div>
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default btn-flat">
+                                        <button type="button" class="btn btn-default">
                                             <i class="mdi-social-share"></i>
                                         </button>
                                     </div>
