--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -31,8 +31,10 @@
                     <div class="item-body">
                         <div class="item-images">
                             <a href="{{pathFor route='products.view' data=this }}">
-                                {{ #if image }}
-                                    <img src="{{ abs image.url }}" />
+                                {{ #if images }}
+                                    {{ #each images }}
+                                    <img src="{{ abs url }}" />
+                                    {{ /each }}
                                 {{ else }}
                                     <img src="http://merchist.meteor.com/cfs/files/images/4K8QqX3EBEZFK6d35?token=eyJhdXRoVG9rZW4iOiJXcGZKcXJ3UlpITUoycnJ1aC1FMGswYkwzTVNSSkdrWms2Z3RMTmUwN2ZIIn0%3D">
                                 {{ /if }}
