cfs:access-point fix

--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -33,7 +33,7 @@
                             <a href="{{pathFor route='products.view' data=this }}">
                                 {{ #if images }}
                                     {{ #each images }}
-                                    <img src="{{ abs url }}" />
+                                    <img src="{{ url }}" />
                                     {{ /each }}
                                 {{ else }}
                                     <img src="http://merchist.meteor.com/cfs/files/images/4K8QqX3EBEZFK6d35?token=eyJhdXRoVG9rZW4iOiJXcGZKcXJ3UlpITUoycnJ1aC1FMGswYkwzTVNSSkdrWms2Z3RMTmUwN2ZIIn0%3D">
