--- a/client/sell/sell.html
+++ b/client/sell/sell.html
@@ -1,16 +1,26 @@
 <template name="sellView">
     <div class="sell-view">
         <div class="container">
-            <h1 class="page-header">Sell new product</h1>
-            {{#autoForm collection="Products" id="sellForm" type="insert"}}
-                <fieldset>
-                    {{> afQuickField name='imageIds' type="mcImages"}}
-                    {{> afQuickField name='title'}}
-                    {{> afQuickField name='description' rows=6}}
-                    {{> afQuickField name='price'}}
-                </fieldset>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            {{/autoForm}}
+            <div class="well">
+                {{#autoForm collection="Products" id="sellForm" type="insert"}}
+                    <fieldset>
+                        <legend>Sell product</legend>
+                        {{> afQuickField name='imageIds' type="mcImages"}}
+                        {{> afQuickField name='title'}}
+                        {{> afQuickField name='description' rows=6}}
+                        {{> afQuickField name='price'}}
+                    </fieldset>
+                {{/autoForm}}
+                <div class="form-group">
+                    <div class="togglebutton togglebutton-facebook">
+                        <label>
+                            <input type="checkbox" name="shareOnFacebook"> Share on Facebook
+                        </label>
+                    </div>
+                </div>
+                <hr>
+                <button type="submit" form="sellForm" class="btn btn-primary btn-lg btn-block">Submit</button>
+            </div>
         </div>
     </div>
 </template>
