--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,8 +1,12 @@
 <template name="profile">
     <div class="profile-view">
-        {{> profileDetails}}
-        {{> profileAccounts}}
-        {{> profileReviews}}
-        {{> profileOrders}}
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Profile</h1>
+            </div>
+        </div>
+        <div class="container">
+            {{> profileDetails}}
+        </div>
     </div>
 </template>
