--- a/client/profile/details/seller_info/seller_info.html
+++ b/client/profile/details/seller_info/seller_info.html
@@ -1,23 +1,14 @@
 <template name="profileDetailsSellerInfo">
     <div class="seller-info">
         <div class="well">
-            <form class="form-horizontal">
+            {{#autoForm schema=schema doc=currentUser id="sellerInfoForm" validation="keyup"}}
                 <fieldset>
                     <legend>Seller info</legend>
-                    <div class="form-group">
-                        <label for="email" class="col-sm-2 control-label">Contact email:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="email" id="email" value="{{ profile.email }}" placeholder="Contact email" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone" class="col-sm-2 control-label">Contact phone:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="phone" id="phone" value="{{ profile.phone }}" placeholder="Contact phone" />
-                        </div>
-                    </div>
+                    {{> afQuickField name='profile.email' type='email'}}
+                    {{> afQuickField name='profile.phone' type='tel'}}
                 </fieldset>
-            </form>
+                <button type="submit" class="btn btn-default btn-block">Save</button>
+            {{/autoForm}}
         </div>
     </div>
 </template>
