--- a/client/pages/policy.html
+++ b/client/pages/policy.html
@@ -1,11 +1,11 @@
 <template name="policy">
     <div class="policy-view">
-        <div class="container-fluid">
-            <div class="page-header">
-                <h1>
-                    Privacy Policy
-                </h1>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Privacy Policy</h1>
             </div>
+        </div>
+        <div class="container">
             <p>
                 <strong>
                     Few applications are more transparent than Mercher. We aim to respect your privacy and to build a useful
