--- a/client/pages/terms.html
+++ b/client/pages/terms.html
@@ -1,11 +1,11 @@
 <template name="terms">
     <div class="terms-view">
-        <div class="container-fluid">
-            <div class="page-header">
-                <h1>
-                    Terms of Service Agreement
-                </h1>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Terms of Service Agreement</h1>
             </div>
+        </div>
+        <div class="container">
             <p>
                 Mercher is designed to help users effortlessly turn their passions and talents into a business. Mercher (also
                 referred to as “we” in this document”) hopes to spur innovation, create jobs, bring communities together and
