--- a/client/sell/sell.html
+++ b/client/sell/sell.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <hr>
-                <button type="submit" form="sellForm" class="btn btn-primary btn-block">Submit</button>
+                <button type="submit" form="sellForm" class="btn btn-default btn-block">Submit</button>
             </div>
         </div>
     </div>
