marketplace images size

--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -46,7 +46,7 @@
                             <a href="{{pathFor route='products.view' data=this }}">
                                 {{ #if images }}
                                     {{ #each images }}
-                                    <img src="{{ url }}" />
+                                        <img src="{{ url store='m' }}" />
                                     {{ /each }}
                                 {{ /if }}
                             </a>
