marketplace layout fix

--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -45,7 +45,7 @@
                         <div class="item-images">
                             <a href="{{pathFor route='products.view' data=this }}">
                                 {{ #with image }}
-                                    <img src="{{ url store='m' }}" />
+                                    <img src="{{ url store='o' }}" />
                                 {{ /with }}
                             </a>
                         </div>
