--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -1,5 +1,6 @@
 <template name="marketplace">
     <div class="marketplace-view">
+        {{> friendsLookupPartial}}
         <div class="box">
             {{ #each products }}
                 <div class="item">
