--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -72,7 +72,7 @@
                             {{ /if }}
                             <div class="item-actions">
                                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                                    <div class="btn-group" role="group">
+                                    <!--<div class="btn-group" role="group">
                                         <button type="button" class="btn btn-default">
                                             <i class="mdi-action-favorite-outline"></i>
                                         </button>
@@ -81,9 +81,9 @@
                                         <button type="button" class="btn btn-default">
                                             <i class="mdi-action-add-shopping-cart"></i>
                                         </button>
-                                    </div>
+                                    </div>-->
                                     <div class="btn-group" role="group">
-                                        <button type="button" class="btn btn-default">
+                                        <button type="button" class="btn btn-default shareBtn">
                                             <i class="mdi-social-share"></i>
                                         </button>
                                     </div>
