--- a/client/splash/splash.html
+++ b/client/splash/splash.html
@@ -20,6 +20,8 @@
                         <circle r="4" cy="10" cx="60" ></circle>
                     </svg>
                 </div>
+
+                <i>* This application is in development, use it only for preview.</i>
             </section>
         </div>
     </section>
