--- a/client/profile/details/seller_info/seller_info.html
+++ b/client/profile/details/seller_info/seller_info.html
@@ -1,13 +1,79 @@
 <template name="profileDetailsSellerInfo">
     <div class="seller-info">
-        <div class="well">
-            {{#autoForm collection=collection doc=currentUser id="sellerInfoForm" type="update" autosave=true removeEmptyStrings=false}}
-                <fieldset>
-                    <legend>Seller info</legend>
-                    {{> afQuickField name='profile.email' type='email'}}
-                    {{> afQuickField name='profile.phone' type='tel'}}
-                </fieldset>
-            {{/autoForm}}
-        </div>
+        {{ #if currentUser.services.paypal }}
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">PayPal Account</h3>
+                </div>
+                <div class="panel-body">
+                    {{ #with currentUser.services.paypal }}
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Account info</h3>
+                                <table class="table table-hover">
+                                    <tbody>
+                                        <tr><td>ID</td><td>{{ id }}</td></tr>
+                                        <tr><td>Account status</td><td>{{ accountStatus }}</td></tr>
+                                        <tr><td>Account type</td><td>{{ accountType }}</td></tr>
+                                    </tbody>
+                                </table>
+
+                                {{ #if notVerified }}
+                                    <div class="alert alert-danger" role="alert">
+                                        Your account is not verified. You can't sell with not verified account.
+                                    </div>
+                                {{ /if }}
+
+                                {{ #if notBusiness }}
+                                    <div class="alert alert-danger" role="alert">
+                                        Your account should be "Business" or "Premier". You can't sell with "Personal" account.
+                                    </div>
+                                {{ /if }}
+
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Contact info</h3>
+                                <table class="table table-hover">
+                                    <tbody>
+                                        <tr><td>First Name</td><td>{{ firstName }}</td></tr>
+                                        <tr><td>Last Name</td><td>{{ lastName }}</td></tr>
+                                        <tr><td>Full Name</td><td>{{ fullName }}</td></tr>
+                                        <tr><td>Birth Date</td><td>{{ birthDate }}</td></tr>
+                                        <tr><td>Company</td><td>{{ company }}</td></tr>
+                                        <tr><td>Email</td><td>{{ email }}</td></tr>
+                                        <tr><td>Phone</td><td>{{ phone }}</td></tr>
+                                        <tr><td>Country</td><td>{{ country }}</td></tr>
+                                        <tr><td>State</td><td>{{ state }}</td></tr>
+                                        <tr><td>City</td><td>{{ city }}</td></tr>
+                                        <tr><td>Street 1</td><td>{{ street1 }}</td></tr>
+                                        <tr><td>Street 2</td><td>{{ street2 }}</td></tr>
+                                        <tr><td>Postal Code</td><td>{{ postalCode }}</td></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    {{ /with }}
+                </div>
+                <div class="panel-footer text-right">
+                    <button class="btn btn-default text-right attachBtn">
+                        Change PayPal Account
+                    </button>
+                </div>
+            </div>
+        {{ else }}
+            <div class="panel panel-material-deeporange">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Start selling!</h3>
+                </div>
+                <div class="panel-body">
+                    It's just one click away from you! To start you just have to attach your business PayPal account.
+                </div>
+                <div class="panel-footer text-right">
+                    <button class="btn btn-material-deeporange text-right attachBtn">
+                        Attach PayPal Account
+                    </button>
+                </div>
+            </div>
+        {{ /if }}
     </div>
 </template>
